--- a/loadingscreen sleeford/index.html
+++ b/loadingscreen sleeford/index.html
@@ -23,9 +23,9 @@
         <div class="wbg">
           <div class="propic"></div>
         </div>
-        <p class="name">Los Santos City RP</p>
+        <p class="name">RainyDayzRP</p>
         <p class="steamid">32 Slots</p>
-        <p class="steamid">https://discord.gg/b6aB5wS</p>
+        <p class="steamid">https://discord.gg/UsXvSx</p>
         <p class="steamid"> </p>
       </div>
       <div class="letni">
